--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <div style="text-align: left; margin-bottom: 10px;">
   <img src="./Perlapots_Logo.jpg" alt="لوگو" style="height: 50px;">
 </div>
-  
-  <table>
+ <table>
 <thead>
   <tr>
     <th>نام محصول</th>
@@ -49,6 +48,218 @@
     <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
     <td class="row-total">0</td>
   </tr>
+  <tr data-price="335000">
+    <td>پیش دستی قطر ۱۸ </td>
+    <td>335000</td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="450000">
+    <td>بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا</td>
+    <td>450000</td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="880000">
+    <td>دیس بیضی بزرگ مناسب برنج</td>
+    <td>880000</td>
+    <td><input type="number" name="دیس بیضی بزرگ مناسب برنج-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="دیس بیضی بزرگ مناسب برنج-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="دیس بیضی بزرگ مناسب برنج-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="دیس بیضی بزرگ مناسب برنج-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="دیس بیضی بزرگ مناسب برنج-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="دیس بیضی بزرگ مناسب برنج-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+ <tr data-price="410000">
+    <td>ظرف بیضی طول ۲۹ عرض ۱۶ مناسب پذیرایی</td>
+    <td>410000</td>
+    <td><input type="number" name="ظرف بیضی طول ۲۹ عرض ۱۶ مناسب پذیرایی-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ظرف بیضی طول ۲۹ عرض ۱۶ مناسب پذیرایی-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ظرف بیضی طول ۲۹ عرض ۱۶ مناسب پذیرایی-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ظرف بیضی طول ۲۹ عرض ۱۶ مناسب پذیرایی-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ظرف بیضی طول ۲۹ عرض ۱۶ مناسب پذیرایی-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ظرف بیضی طول ۲۹ عرض ۱۶ مناسب پذیرایی-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+   <tr data-price="530000">
+    <td>کاسه سالاد قطر ۲۱ ارتفاع ۶.۵</td>
+    <td>530000</td>
+    <td><input type="number" name="کاسه سالاد قطر ۲۱ ارتفاع ۶.۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سالاد قطر ۲۱ ارتفاع ۶.۵-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سالاد قطر ۲۱ ارتفاع ۶.۵-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سالاد قطر ۲۱ ارتفاع ۶.۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سالاد قطر ۲۱ ارتفاع ۶.۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سالاد قطر ۲۱ ارتفاع ۶.۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="440000">
+    <td>کاسه روزانه قطر ۱۶ ارتفاع ۶</td>
+    <td>440000</td>
+    <td><input type="number" name="کاسه روزانه قطر ۱۶ ارتفاع ۶-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه روزانه قطر ۱۶ ارتفاع ۶-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه روزانه قطر ۱۶ ارتفاع ۶-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه روزانه قطر ۱۶ ارتفاع ۶-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه روزانه قطر ۱۶ ارتفاع ۶-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه روزانه قطر ۱۶ ارتفاع ۶-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="300000">
+    <td>کاسه سوپ قطر ۱۲ ارتفاع ۵.۵</td>
+    <td>300000</td>
+    <td><input type="number" name="کاسه سوپ قطر ۱۲ ارتفاع ۵.۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سوپ قطر ۱۲ ارتفاع ۵.۵-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سوپ قطر ۱۲ ارتفاع ۵.۵-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سوپ قطر ۱۲ ارتفاع ۵.۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سوپ قطر ۱۲ ارتفاع ۵.۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه سوپ قطر ۱۲ ارتفاع ۵.۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="280000">
+    <td>کاسه ماست قطر ۱۰ ارتفاع ۵</td>
+    <td>280000</td>
+    <td><input type="number" name="کاسه ماست قطر ۱۰ ارتفاع ۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه ماست قطر ۱۰ ارتفاع ۵-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه ماست قطر ۱۰ ارتفاع ۵-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه ماست قطر ۱۰ ارتفاع ۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه ماست قطر ۱۰ ارتفاع ۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه ماست قطر ۱۰ ارتفاع ۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="190000">
+    <td>پیاله کوچک قطر ۸ مناسب زیتون یا ترشی</td>
+    <td>190000</td>
+    <td><input type="number" name="پیاله کوچک قطر ۸ مناسب زیتون یا ترشی-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیاله کوچک قطر ۸ مناسب زیتون یا ترشی-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیاله کوچک قطر ۸ مناسب زیتون یا ترشی-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیاله کوچک قطر ۸ مناسب زیتون یا ترشی-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیاله کوچک قطر ۸ مناسب زیتون یا ترشی-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیاله کوچک قطر ۸ مناسب زیتون یا ترشی-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+   <tr data-price="250000">
+    <td>کاسه بیضی دفرمه طول ۱۶ عرض ۱۰ ارتفاع ۳</td>
+    <td>250000</td>
+    <td><input type="number" name="کاسه بیضی دفرمه طول ۱۶ عرض ۱۰ ارتفاع ۳-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه بیضی دفرمه طول ۱۶ عرض ۱۰ ارتفاع ۳-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه بیضی دفرمه طول ۱۶ عرض ۱۰ ارتفاع ۳-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه بیضی دفرمه طول ۱۶ عرض ۱۰ ارتفاع ۳-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه بیضی دفرمه طول ۱۶ عرض ۱۰ ارتفاع ۳-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاسه بیضی دفرمه طول ۱۶ عرض ۱۰ ارتفاع ۳-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="350000">
+    <td>بشقاب تخت بیضی دفرمه طول ۲۴ عرض ۱۶.۵</td>
+    <td>350000</td>
+    <td><input type="number" name="بشقاب تخت بیضی دفرمه طول ۲۴ عرض ۱۶.۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب تخت بیضی دفرمه طول ۲۴ عرض ۱۶.۵-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب تخت بیضی دفرمه طول ۲۴ عرض ۱۶.۵-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب تخت بیضی دفرمه طول ۲۴ عرض ۱۶.۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب تخت بیضی دفرمه طول ۲۴ عرض ۱۶.۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب تخت بیضی دفرمه طول ۲۴ عرض ۱۶.۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+   </tr><tr data-price="180000">
+    <td>ساید بیضی طول ۱۴.۵ عرض ۷.۵ ارتفاع ۲</td>
+    <td>180000</td>
+    <td><input type="number" name="ساید بیضی طول ۱۴.۵ عرض ۷.۵ ارتفاع ۲-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ساید بیضی طول ۱۴.۵ عرض ۷.۵ ارتفاع ۲-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ساید بیضی طول ۱۴.۵ عرض ۷.۵ ارتفاع ۲-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ساید بیضی طول ۱۴.۵ عرض ۷.۵ ارتفاع ۲-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ساید بیضی طول ۱۴.۵ عرض ۷.۵ ارتفاع ۲-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ساید بیضی طول ۱۴.۵ عرض ۷.۵ ارتفاع ۲-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr><tr data-price="175000">
+    <td>سس خوری کوچک قطر ۶.۵ ارتفاع ۴.۵ </td>
+    <td>175000</td>
+    <td><input type="number" name="سس خوری کوچک قطر ۶.۵ ارتفاع ۴.۵ -Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="سس خوری کوچک قطر ۶.۵ ارتفاع ۴.۵ -Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="سس خوری کوچک قطر ۶.۵ ارتفاع ۴.۵ -Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="سس خوری کوچک قطر ۶.۵ ارتفاع ۴.۵ -Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="سس خوری کوچک قطر ۶.۵ ارتفاع ۴.۵ -Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="سس خوری کوچک قطر ۶.۵ ارتفاع ۴.۵ -Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr><tr data-price="190000">
+    <td>مینی کریمر قطر ۵.۵ ارتفاع ۷</td>
+    <td>190000</td>
+    <td><input type="number" name="مینی کریمر قطر ۵.۵ ارتفاع ۷-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="مینی کریمر قطر ۵.۵ ارتفاع ۷-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="مینی کریمر قطر ۵.۵ ارتفاع ۷-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="مینی کریمر قطر ۵.۵ ارتفاع ۷-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="مینی کریمر قطر ۵.۵ ارتفاع ۷-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="مینی کریمر قطر ۵.۵ ارتفاع ۷-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr><tr data-price="550000">
+    <td>کاپ لاته به همراه رست ۳۴۰ سی سی</td>
+    <td>550000</td>
+    <td><input type="number" name="کاپ لاته به همراه رست ۳۴۰ سی سی-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ لاته به همراه رست ۳۴۰ سی سی-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ لاته به همراه رست ۳۴۰ سی سی-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ لاته به همراه رست ۳۴۰ سی سی-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ لاته به همراه رست ۳۴۰ سی سی-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ لاته به همراه رست ۳۴۰ سی سی-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr><tr data-price="460000">
+    <td>کاپ کاپوچینو به همراه رست ۲۲۰ سی سی</td>
+    <td>460000</td>
+    <td><input type="number" name="کاپ کاپوچینو به همراه رست ۲۲۰ سی سی-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ کاپوچینو به همراه رست ۲۲۰ سی سی-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ کاپوچینو به همراه رست ۲۲۰ سی سی-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ کاپوچینو به همراه رست ۲۲۰ سی سی-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ کاپوچینو به همراه رست ۲۲۰ سی سی-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ کاپوچینو به همراه رست ۲۲۰ سی سی-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr><tr data-price="390000">
+    <td>کاپ اسپرسو به همراه رست ۱۲۰ سی سی </td>
+    <td>390000</td>
+    <td><input type="number" name="کاپ اسپرسو به همراه رست ۱۲۰ سی سی -Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ اسپرسو به همراه رست ۱۲۰ سی سی -Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ اسپرسو به همراه رست ۱۲۰ سی سی -Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ اسپرسو به همراه رست ۱۲۰ سی سی -Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ اسپرسو به همراه رست ۱۲۰ سی سی -Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="کاپ اسپرسو به همراه رست ۱۲۰ سی سی -Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr><tr data-price="320000">
+    <td>ماگ ۲۷۰ سی سی مدل هگزا، قطر ۸.۵ ارتفاع ۸ </td>
+    <td>320000</td>
+    <td><input type="number" name="ماگ ۲۷۰ سی سی مدل هگزا، قطر ۸.۵ ارتفاع ۸ -Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ ۲۷۰ سی سی مدل هگزا، قطر ۸.۵ ارتفاع ۸ -Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ ۲۷۰ سی سی مدل هگزا، قطر ۸.۵ ارتفاع ۸ -Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ ۲۷۰ سی سی مدل هگزا، قطر ۸.۵ ارتفاع ۸ -Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ ۲۷۰ سی سی مدل هگزا، قطر ۸.۵ ارتفاع ۸ -Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="ماگ ۲۷۰ سی سی مدل هگزا، قطر ۸.۵ ارتفاع ۸ -Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr><tr data-price="245000">
+    <td> ماگ ۱۸۰ سی سی مدل هگزا ،قطر ۷.۵ ارتفاع ۶.۵</td>
+    <td>245000</td>
+    <td><input type="number" name=" ماگ ۱۸۰ سی سی مدل هگزا ،قطر ۷.۵ ارتفاع ۶.۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name=" ماگ ۱۸۰ سی سی مدل هگزا ،قطر ۷.۵ ارتفاع ۶.۵-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name=" ماگ ۱۸۰ سی سی مدل هگزا ،قطر ۷.۵ ارتفاع ۶.۵-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name=" ماگ ۱۸۰ سی سی مدل هگزا ،قطر ۷.۵ ارتفاع ۶.۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name=" ماگ ۱۸۰ سی سی مدل هگزا ،قطر ۷.۵ ارتفاع ۶.۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name=" ماگ ۱۸۰ سی سی مدل هگزا ،قطر ۷.۵ ارتفاع ۶.۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="195000">
+    <td>شات اسپرسو ۹۰ سی سی مدل هگزا ، قطر ۶ ارتفاع ۵.۵</td>
+    <td>195000</td>
+    <td><input type="number" name="شات اسپرسو ۹۰ سی سی مدل هگزا ، قطر ۶ ارتفاع ۵.۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="شات اسپرسو ۹۰ سی سی مدل هگزا ، قطر ۶ ارتفاع ۵.۵-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="شات اسپرسو ۹۰ سی سی مدل هگزا ، قطر ۶ ارتفاع ۵.۵-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="شات اسپرسو ۹۰ سی سی مدل هگزا ، قطر ۶ ارتفاع ۵.۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="شات اسپرسو ۹۰ سی سی مدل هگزا ، قطر ۶ ارتفاع ۵.۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="شات اسپرسو ۹۰ سی سی مدل هگزا ، قطر ۶ ارتفاع ۵.۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
   <tr data-price="298000">
     <td>لیوان بدون دسته ارتفاع ۱۳ قطر ۸.۵ مناسب شیک و اسموتی</td>
     <td>298000</td>
@@ -62,6 +273,7 @@
   </tr>
 </tbody>
 </table>
+
 
 <div class="summary">
   <strong>جمع کل بدون تخفیف:</strong> <span id="raw-total">0</span> تومان<br />
